# mlir-exec

./: .gitignore  CMakeLists.txt  README.md  make.sh
ex0-define_dialect/: CMakeLists.txt  main.cpp
ex0-define_dialect/include/Dialect/Exec/IR/: CMakeLists.txt  ExecDialect.td
ex0-define_dialect/lib/Dialect/: CMakeLists.txt
ex0-define_dialect/lib/Dialect/Exec/IR/: CMakeLists.txt  ExecDialect.cpp
ex1-define_type/: CMakeLists.txt  main.cpp
ex1-define_type/include/Dialect/Exec/IR/: CMakeLists.txt  ExecDialect.h  ExecDialect.td  ExecTypes.h  ExecTypes.td
ex1-define_type/lib/Dialect/Exec/IR/: CMakeLists.txt  ExecDialect.cpp
ex2-define_attribute/: CMakeLists.txt  main.cpp
ex2-define_attribute/include/Dialect/Exec/IR/: CMakeLists.txt  ExecAttrs.h  ExecDialect.td  ExecTypes.h  ExecTypes.td
ex2-define_attribute/lib/Dialect/Exec/IR/: CMakeLists.txt  ExecAttrs.cpp  ExecDialect.cpp
ex3-define_operation/: CMakeLists.txt  main.cpp
ex3-define_operation/include/Dialect/Exec/IR/: ExecAttrs.td  ExecConstraints.td  ExecDialect.td  ExecOps.td
ex3-define_operation/lib/Dialect/Exec/IR/: CMakeLists.txt  ExecAttrs.cpp
ex4-define_pass/: CMakeLists.txt  main.cpp
ex4-define_pass/include/Dialect/Exec/IR/: CMakeLists.txt  ExecDialect.h  ExecOps.td  ExecTypes.h
ex4-define_pass/include/Dialect/Exec/Transforms/: CMakeLists.txt
ex4-define_pass/lib/Dialect/Exec/Transforms/: CMakeLists.txt  Passes.cpp
ex5-rewrite_pattern/: CMakeLists.txt
ex5-rewrite_pattern/include/Dialect/Exec/IR/: ExecOps.td
ex5-rewrite_pattern/include/Dialect/Exec/Transforms/: Passes.h  Passes.td
ex5-rewrite_pattern/lib/Dialect/Exec/IR/: CMakeLists.txt
ex5-rewrite_pattern/lib/Dialect/Exec/Transforms/: ApplyRewritePattern.cpp
ex6-lit_for_test/: CMakeLists.txt  main.cpp
ex6-lit_for_test/include/Dialect/Exec/IR/: ExecAttrs.h  ExecConstraints.td  ExecOps.h
ex6-lit_for_test/lib/: CMakeLists.txt
ex6-lit_for_test/lib/Dialect/Exec/IR/: CMakeLists.txt  ExecDialect.cpp  ExecOps.cpp  ExecTypes.cpp
ex6-lit_for_test/lib/Dialect/Exec/Transforms/: CMakeLists.txt
ex6-lit_for_test/lib/Tools/: CMakeLists.txt
ex6-lit_for_test/lib/Tools/Exec-opt/: CMakeLists.txt  Exec-opt.cpp
ex6-lit_for_test/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
ex6-lit_for_test/test/Exec/: test.mlir  transform.mlir
